# duckdb-python-data-engineering

./: Makefile  README.md  pyproject.toml
ingestion/: bigquery.py  models.py  pipeline.py
tests/ingestion/: test_models.py
