[tool.poetry]
name = "duckdb-python-data-engineering"
version = "0.1.0"
description = ""
authors = ["Daniel Henrique <hsdanield@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.2"
google-cloud-bigquery = "^3.26.0"
google-auth = "^2.35.0"
google-cloud-bigquery-storage = "^2.27.0"
pyarrow = "^17.0.0"
pandas = "^2.2.3"
fire = "^0.7.0"
loguru = "^0.7.2"
pydantic = "^2.9.2"
db-dtypes = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 79

# [tool.ruff.lint]
# preview = true
# select = ['I', 'F', 'E', 'W', 'PL', 'PT']
# ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'double'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
